--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
         <link rel="stylesheet" href="style.css" />
         <script src="scripts/script.js" type="module"></script>
 
-        <title>Document</title>
+        <title>Super Mauro World</title>
+        <link rel="shortcut icon" href="assets/pipe.png" type="image/x-icon" />
     </head>
     <body>
         <section class="menu">
-            <h1>Mauro World</h1>
+            <h1>Super Mauro World</h1>
             <div class="buttons">
                 <button id="new-game">Iniciar Jogo</button>
                 <button id="credits">Créditos</button>
@@ -29,6 +30,9 @@
             <button id="reset">Reiniciar</button>
         </div>
 
-        <div class="count">0</div>
+        <div class="count">
+            <p>Pontuação atual: <span class="current-count">0</span></p>
+            <p>Pontuação máxima: <span class="max-count">0</span></p>
+        </div>
     </body>
 </html>
